--- a/css/style.css
+++ b/css/style.css
@@ -5,87 +5,27 @@
 }
 
 body {
-    min-height: 100vh;
-    max-width:100vw;
-    background: linear-gradient(#2b1055, #222835);
+    /* background: linear-gradient(#2b1055, #222835); */
     color: white;
+    margin:0;
+    padding:0;
     /* background-color: black; */
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
 }
 
 /* Cursor */
-#first {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow-x:hidden;
-}
 
-#first img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    object-fit:fill;
-    pointer-events: none;
-    z-index: 20;
-}
-
-#first #galaxy {
-    /* opacity:0.5;   */
-    z-index: 10;
-}
-
-#first #tech {
-    mix-blend-mode: hard-light;
-    z-index: 15;
-}
-
-#first #star {
-    mix-blend-mode: screen;
-    z-index: 13;
-}
-
-#first a {
-    text-decoration: none;
-    padding: 4px 20px;
-    border-radius: 40px;
-    background: rgb(255, 255, 255);
-    color: black;
-    font-size: 1.5rem;
-    position: absolute;
-    top: 50%;
-    z-index: 12;
-}
-
-#first span {
-    position: absolute;
-    top: 40%;
-    font-size: 2.3rem;
-    font-weight: bold;
-    z-index: 30;
-}
 
 #second {
     position: absolute;
     /* border:2px solid red; */
-    top: 100vh;
+    width:100vw;
     height: 100vh;
-    width:100%;
-}
-
-#second::before {
-    content: '';
-    position: absolute;
-    mix-blend-mode: screen;
-    top: -5px;
-    height: 20px;
-    width: 100%;
-    /* border:2px solid red; */
-    /* box-shadow:inset -2px -2px 10px 2px #2b1055; */
-    background: linear-gradient(to top, #22283500, #222835);
+    background-color: rgba(0, 0, 0, 0.952);
+    /* left:0; */
+    z-index:-10;
+    overflow-x:hidden;
 }
 
 nav {
@@ -96,12 +36,15 @@ nav {
     position: sticky;
     width: 100vw;
     top: 0;
-    z-index: 1000;
+    z-index: 10001;
+    border-bottom:1px solid white;
     /* border: 2px solid red; */
     /* box-shadow:0px -10px 10px red; */
-    background-color: rgb(36 24 84);
+    background-color:rgb(15, 1, 17);
 }
-
+nav .left{
+    cursor: pointer;
+}
 nav ul {
     display: flex;
     justify-content: center;
