--- a/css/contact.css
+++ b/css/contact.css
@@ -5,18 +5,22 @@
 }
 
 body {
-    color: #ffffffd2;
+    /* color: #ff0000d2; */
     font-family: 'Poppins', sans-serif;
-    overflow:hidden;
+    overflow-x:hidden;
+    /* border:2px solid red; */
+    height:100vh;
+    width:100vw;
 }
 
 nav {
     background-color:transparent;
     display: flex;
+    flex-direction:column-reverse;
     align-items: center;
     justify-content: space-around;
     height: 82px;
-    /* border:2px solid red; */
+    border:2px solid red;
 }
 
 nav ul {
@@ -48,6 +52,7 @@ header::before{
     height:100vh;
     z-index:-1;
     top:0;
+    opacity:0.97;
 }
 header hr{
     border:0;
@@ -172,5 +177,14 @@ button:hover{
 
 .forget label input[ type="checkbox"]{
     margin-right: 6px;
+}
+
+/* Responsive */
+@media only screen and (max-width:1059px) {
+    body{
+        width:100vw;
+        height:100vh;
+    }
+  
 }
 
