--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@
 }
 
 body {
-    /* background: linear-gradient(#2b1055, #222835); */
+
     color: white;
-    margin:0;
-    padding:0;
-    /* background-color: black; */
+    margin: 0;
+    padding: 0;
+
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
 }
@@ -19,13 +19,13 @@ body {
 
 #second {
     position: absolute;
-    /* border:2px solid red; */
-    width:100vw;
+
+    width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.952);
-    /* left:0; */
-    z-index:-10;
-    overflow-x:hidden;
+
+    z-index: -10;
+    overflow-x: hidden;
 }
 
 nav {
@@ -37,14 +37,15 @@ nav {
     width: 100vw;
     top: 0;
     z-index: 10001;
-    border-bottom:1px solid white;
-    /* border: 2px solid red; */
-    /* box-shadow:0px -10px 10px red; */
-    background-color:rgb(15, 1, 17);
+    border-bottom: 1px solid white;
+
+    background-color: rgb(15, 1, 17);
 }
-nav .left{
+
+nav .left {
     cursor: pointer;
 }
+
 nav ul {
     display: flex;
     justify-content: center;
@@ -124,16 +125,13 @@ nav ul li a:hover {
     font-size: 1.4rem;
 }
 
-/* Section */
-/* .main{
-    width:100vw;
-} */
+
 .firstsection {
     display: flex;
-    justify-content:space-between;
-    /* border:2px solid red; */
-    width:100vw;
-    height:100%;
+    justify-content: space-between;
+
+    width: 100vw;
+    height: 100%;
     margin: 100px 0;
     align-items: center;
     overflow-x: hidden;
@@ -144,10 +142,10 @@ nav ul li a:hover {
 }
 
 .leftsection {
-    display:flex;
-    width:80%;
-    flex-direction:column;
-    justify-content:center;
+    display: flex;
+    width: 80%;
+    flex-direction: column;
+    justify-content: center;
     align-self: center;
     font-size: 2rem;
 }
@@ -179,7 +177,7 @@ nav ul li a:hover {
     border-radius: 16px;
     font-size: 1.7rem;
     position: relative;
-    left:130px;
+    left: 130px;
 }
 
 .leftsection p i {
@@ -187,11 +185,11 @@ nav ul li a:hover {
 }
 
 .fa-solid {
-    /* color:red; */
+
     animation-name: rex;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-    /* animation-delay:0.5s; */
+
     position: relative;
 }
 
@@ -226,23 +224,23 @@ nav ul li a:hover {
 
 #element2 {
     color: rgb(255, 6, 255);
-    width:60%;
+    width: 60%;
     font-weight: 300;
     margin-left: 80px;
     position: relative;
-    left:80px;
+    left: 80px;
     font-family: 'Baloo 2', cursive;
-    /* border:2px solid red; */
+
 }
 
 #element3 {
     color: rgb(255, 255, 255);
-    width:62%;
+    width: 62%;
     font-weight: 300;
     font-size: 1.3rem;
-    position:relative;
+    position: relative;
     left: 160px;
-    /* margin-right:40rem; */
+
 }
 
 #purple {
@@ -250,13 +248,15 @@ nav ul li a:hover {
     font-weight: bolder;
 }
 
-.rightsection{
-    width:40%;
+.rightsection {
+    width: 40%;
 }
-.rightsection img{
+
+.rightsection img {
     width: 80%;
     margin: 10px -80px;
-    padding-right:100px;
+    padding-right: 100px;
+    filter: drop-shadow(3px 6px 5px white);
 }
 
 
@@ -265,7 +265,7 @@ nav ul li a:hover {
 .firstsection .buttons {
     position: relative;
     left: 15%;
-    top:60px;
+    top: 60px;
 }
 
 .firstsection .buttons a {
@@ -390,7 +390,7 @@ nav ul li a:hover {
 .secondsection {
     max-width: 75vw;
     margin: auto;
-    /* overflow-x: hidden; */
+
 }
 
 main hr {
@@ -401,7 +401,7 @@ main hr {
     animation-name: rex2;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-    /* overflow-x: hidden; */
+
 }
 
 @keyframes rex2 {
@@ -455,25 +455,26 @@ main hr {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    margin:100px 0;
+    margin: 100px 0;
     align-items: center;
     justify-content: center;
     background: linear-gradient(to top, #22283500, #222835);
     box-shadow: 0 -10px 110px 40px rgb(0, 0, 0);
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
 
-.footer h3{
+.footer h3 {
     text-shadow:
-    1px 3px 2px #000,
+        1px 3px 2px #000,
         -1px 3px 2px #000,
         -1px -3px 2px #000,
         1px -3px 2px #000;
-        -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: rgba(158, 29, 141, 0.788);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(158, 29, 141, 0.788);
     transform: rotate(5deg);
     padding-top: 26px;
 }
+
 .footer ul {
     display: flex;
     list-style: none;
@@ -483,12 +484,12 @@ main hr {
 }
 
 .footer ul li {
-    /* border: 2px solid red; */
+
     display: flex;
-    /* justify-content: center; */
+
     height: 60px;
     align-items: center;
-    /* justify-content: space-evenly; */
+
     margin: 21px 12px;
 }
 
