--- a/css/style.css
+++ b/css/style.css
@@ -5,29 +5,24 @@
 }
 
 body {
-
     color: white;
     margin: 0;
     padding: 0;
-
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
 }
 
-/* Cursor */
-
 
 #second {
     position: absolute;
-
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.952);
-
     z-index: -10;
     overflow-x: hidden;
 }
 
+/* Nav bar / Header */
 nav {
     display: flex;
     align-items: center;
@@ -38,12 +33,12 @@ nav {
     top: 0;
     z-index: 10001;
     border-bottom: 1px solid white;
-
     background-color: rgb(15, 1, 17);
 }
 
 nav .left {
     cursor: pointer;
+    font-size: 1.4rem;
 }
 
 nav ul {
@@ -53,7 +48,7 @@ nav ul {
 
 nav ul li {
     list-style: none;
-    margin: 0 20px;
+    margin: 0px 20px;
     display: table-cell;
 }
 
@@ -65,6 +60,7 @@ nav ul li a {
     display: inline-block;
     padding: 15px 10px;
     position: relative;
+    top: 10px;
 }
 
 nav ul li a:after {
@@ -101,19 +97,18 @@ nav ul li a:hover {
 }
 
 /* hover menu */
-/* header finished */
-#dropdown-content {
-    /* border: 2px solid red; */
+#dropdowncontent {
     position: absolute;
     display: none;
     right: 14%;
-    width: 34rem;
+    width: 70vw;
     height: 20rem;
 }
 
 #project:hover {
-    #dropdown-content {
-        display: block;
+    #dropdowncontent {
+        display: flex;
+        justify-content: center;
         background-color: transparent;
         border: 2px solid rgba(255, 255, 255, 0.5);
         border-radius: 14px;
@@ -121,28 +116,69 @@ nav ul li a:hover {
     }
 }
 
-.left {
-    font-size: 1.4rem;
+#dropdowncontent .rowcontent {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
 }
 
+#dropdowncontent .rowcontent .cardcontent img {
+    display: flex;
+    height: 60%;
+    margin-top: 2px;
+    border-radius: 14px;
+    cursor: pointer;
+}
 
+.cardcontent img:hover {
+    transform: scale(1.02);
+}
+
+.cardcontent {
+    padding: 5px;
+    width: 30rem;
+}
+
+.card-bodycontent {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.card-titlecontent {
+    color: rgb(204, 0, 255);
+    font-weight: bold;
+}
+
+.card-bodycontent a {
+    text-transform: lowercase;
+    color: white;
+    font-size: 0.7rem;
+    background-color: black;
+    border: 1px solid rgba(255, 255, 255, 0.774);
+}
+
+.card-bodycontent a:hover {
+    background-color: black;
+}
+
+/* header finished */
+
+/* Main section */
 .firstsection {
     display: flex;
     justify-content: space-between;
-
     width: 100vw;
-    height: 100%;
-    margin: 100px 0;
+    height: 100vh;
     align-items: center;
-    overflow-x: hidden;
 }
 
-.leftsection {
-    width: 80%;
-}
-
+/* Main section - left section */
 .leftsection {
     display: flex;
+    position: absolute;
+    bottom: 50px;
+    height: 50%;
     width: 80%;
     flex-direction: column;
     justify-content: center;
@@ -184,12 +220,11 @@ nav ul li a:hover {
     padding: 10px;
 }
 
-.fa-solid {
+.leftsection p .fa-solid {
 
     animation-name: rex;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-
     position: relative;
 }
 
@@ -253,10 +288,11 @@ nav ul li a:hover {
 }
 
 .rightsection img {
-    width: 80%;
-    margin: 10px -80px;
+    width: 100%;
+    height: 100%;
+    margin: 0px -80px;
     padding-right: 100px;
-    filter: drop-shadow(3px 6px 5px white);
+    padding-bottom: 120px;
 }
 
 
@@ -280,7 +316,6 @@ nav ul li a:hover {
     color: #03e9f4;
     font-size: 16px;
     text-decoration: none;
-    text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
     margin-top: 40px;
@@ -385,24 +420,36 @@ nav ul li a:hover {
     }
 }
 
-/* Second Section */
-
-.secondsection {
-    max-width: 75vw;
-    margin: auto;
-
-}
-
+/* horizontal line */
 main hr {
     border: 0;
-    background: purple;
-    height: 1px;
+    background: rgb(255, 0, 255);
+    height: 3px;
     margin: 0 100px;
     animation-name: rex2;
     animation-duration: 2s;
     animation-iteration-count: infinite;
 
 }
+
+/* Second Section */
+.secondsection {
+    display: flex;
+    flex-direction: column;
+    max-width: 100vw;
+    margin: 80px 0px;
+}
+
+/* .reveal3{
+    position: relative;
+    transform:translateY(150px);
+    opacity:0;
+}
+.reveal3.active2{
+    transform: translateY(0px);
+    opacity:1;
+} */
+
 
 @keyframes rex2 {
     0% {
@@ -448,6 +495,89 @@ main hr {
     190% {
         width: 100%;
     }
+}
+
+/* Project heading */
+#projectdetail h2 {
+    text-align: center;
+    color: purple;
+    padding: 0px 0px 30px 0px;
+}
+
+#projectdetail h2 span {
+    background-color: rgba(34, 32, 32, 0.479);
+    border: 1px solid purple;
+    border-radius: 10px;
+    padding: 8px;
+    text-shadow: 1px 2px 1px purple,
+        -1px 3px 2px purple,
+        -1px -2px 1px purple,
+        1px -2px 2px purple;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(158, 29, 141, 0.788);
+}
+
+/* Projexts carousel */
+#carouselExampleCaptions {
+    display: flex;
+    height: 88vh;
+    width: 100vw;
+}
+
+.carousel-item>img {
+    filter: blur(8px);
+}
+
+.carousel-control-prev i {
+    font-size: 4em;
+}
+
+.carousel-control-next i {
+    font-size: 4em;
+}
+
+.carousel-img {
+    position: absolute;
+    top: 15%;
+    left: 25%;
+    z-index: 100;
+    width: 48rem;
+}
+
+.card-body {
+    background-color: rgba(203, 90, 218, 0.685);
+}
+
+.card-body h5 {
+    font-weight: bolder;
+    padding-left: 8px;
+}
+
+.card-body h5 span {
+    font-size: 0.8rem;
+    font-weight: 100;
+    position: relative;
+    bottom: 3px;
+    left: 5px;
+}
+
+.card-body a {
+    background-color: black;
+    font-size: 0.8rem;
+    color: white;
+    border-radius: 24px;
+}
+
+.card-body a:hover {
+    background-color: black;
+    opacity: 0.8;
+    color: white;
+    border-radius: 24px;
+}
+
+.card-text {
+    font-weight: bolder;
+    padding: 4px;
 }
 
 /* Footer */
