--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -6,16 +6,12 @@
 }
 
 body {
-    /* color: #ff0000d2; */
     font-family: 'Poppins', sans-serif;
-    /* border:2px solid red; */
     margin: 0;
     padding: 0;
     height: 100vh;
-    overflow-x: hidden;
     width: 100vw;
-    background: url("/Img/bg_contact.jpg")no-repeat;
-    background-size: cover;
+    background-color:black;
     overflow-x: hidden;
 }
 
@@ -28,11 +24,9 @@ nav ul #left {
     left: 10%;
     top: 28px;
     font-size: 1.8rem;
-    /* font-weight: 100; */
 }
 
 nav ul #right {
-    /* border:2px solid red; */
     position: absolute;
     right: 10%;
     top: 35px;
@@ -53,11 +47,10 @@ header img {
 #section {
     display: flex;
     justify-content: center;
-    /* border:2px solid red; */
-    /* align-items:center; */
     height: 80%;
     margin: 150px;
 }
+
 
 section {
     display: flex;
@@ -72,7 +65,6 @@ section h3 {
     width: 100%;
     text-align: center;
     margin: 45px 0px;
-    /* border:2px solid white; */
     background: transparent;
     backdrop-filter: blur(15px);
 }
@@ -96,6 +88,21 @@ form {
     margin: 30px 0;
     width: 300px;
     border-bottom: 2px solid#fff;
+}
+
+/* pop overs */
+
+.popover {
+    display: none;
+    color: red;
+    position: absolute;
+    margin-top: 8px;
+    font-size: 0.8rem;
+}
+
+.inputbox .popover {
+    left: 0;
+    bottom: -20px;
 }
 
 .inputbox label {
@@ -126,7 +133,7 @@ form {
     font-size: 1em;
     padding: 0 35px 0 5px;
     color: #ffffff;
-    caret-color:white;
+    caret-color: white;
 }
 
 .inputbox i {
@@ -141,8 +148,11 @@ form {
     font-size: 1em;
     color: rgb(255, 255, 255);
     position: absolute;
-    top: 56%;
-    left: 13%;
+    display: flex;
+    justify-content: center;
+    width: 90px;
+    top: 53%;
+    left: 11%;
     font-size: 1em;
     pointer-events: none;
 }
@@ -164,23 +174,22 @@ button {
     border-radius: 40px;
     background-color: #030303;
     backdrop-filter: blur(15px);
-    /* border: none; */
     box-shadow: inset 2px 2px 10px white;
     outline: none;
     cursor: pointer;
     font-size: 1.3em;
     font-weight: 700;
+    margin: 4px 0;
 }
 
 button:hover {
-    /* background-color:#e6e2e2; */
     opacity: 0.5;
 }
 
 .forget {
     display: flex;
     justify-content: space-between;
-    margin: 20px 190px 15px 0px;
+    margin: 30px 190px 15px 0px;
     font-size: 0.9em;
     color: #fff;
 }
@@ -190,24 +199,6 @@ button:hover {
 }
 
 /* Responsive */
-@media only screen and (max-width:900px) {
-    * {
-        color: rgb(255, 255, 255);
-    }
-
-    nav ul #left {
-        margin: 2px -37px;
-    }
-
-    nav ul #right {
-        margin: 12px -12px;
-    }
-
-    section h3 {
-        margin: 34px 0px;
-    }
-}
-
 @media only screen and (max-width:900px) {
     * {
         color: rgb(255, 255, 255);
@@ -260,8 +251,13 @@ button:hover {
     }
 
     form {
-        height: 483px;
+        height: 493px;
         margin: -21px;
+    }
+
+    button {
+        /* border: none; */
+        margin: 4px 0 14px 0;
     }
 }
 
@@ -286,7 +282,7 @@ button:hover {
 
     .mytextarea label {
         top: 48%;
-        left: 8%;
+        left: 5%;
     }
 }
 
@@ -302,7 +298,8 @@ button:hover {
         font-size: 1.2rem;
         /* font-weight: 100; */
     }
-    nav ul #right{
+
+    nav ul #right {
         margin: 1px -25px;
     }
 
@@ -310,8 +307,9 @@ button:hover {
         left: 61%;
         height: 25px;
     }
-    .fa-circle-xmark{
-        height:10px;
+
+    .fa-circle-xmark {
+        height: 10px;
     }
 
     section h3 {
@@ -331,17 +329,17 @@ button:hover {
 
     .mytextarea label {
         top: 48%;
-        left: 8%;
+        left: 5%;
     }
-    .mytextarea #text{
+    .mytextarea #text {
         margin-right: -22px;
     }
 }
+
 @media only screen and (max-width:332px) {
     * {
         color: rgb(255, 255, 255);
     }
-
     nav ul #left {
         position: absolute;
         left: 15%;
@@ -349,16 +347,18 @@ button:hover {
         font-size: 1.2rem;
         /* font-weight: 100; */
     }
-    nav ul #right{
-        margin: 1px -25px;
+
+    nav ul #right {
+        margin: 1px -20px;
     }
 
     header img {
         left: 61%;
         height: 25px;
     }
-    .fa-circle-xmark{
-        height:10px;
+
+    .fa-circle-xmark {
+        height: 10px;
     }
 
     section h3 {
@@ -366,8 +366,8 @@ button:hover {
     }
 
     form {
-        height: 438px;
-        width: 280px;
+        height: 428px;
+        width: 230px;
         margin: -21px;
     }
 
@@ -378,12 +378,20 @@ button:hover {
 
     .mytextarea label {
         top: 48%;
-        left: 8%;
+        left: 5%;
     }
-    .mytextarea #text{
-        margin-right: -22px;
+
+    .mytextarea #text {
+        margin-right: -93px;
     }
-    .forget label{
-        width:30%;
+
+    .forget label {
+        width: 108px;
+        position: relative;
+        left: 52%;
+    }
+    button {
+        font-size: 1em;
+        
     }
 }
